Code Inspection changes.